[gd_scene load_steps=3 format=2]

[ext_resource path="res://Colando/hand.png" type="Texture" id=1]
[ext_resource path="res://Colando/mao.gd" type="Script" id=2]


[node name="Cola por m√£o na mesa" type="Node2D"]

[node name="mao" type="TextureRect" parent="."]
margin_left = 700.0
margin_top = 350.0
margin_right = 792.0
margin_bottom = 429.0
texture = ExtResource( 1 )
expand = true
script = ExtResource( 2 )

[node name="timer3seg" type="Timer" parent="mao"]
wait_time = 3.5
autostart = true

[node name="timer1seg" type="Timer" parent="mao"]

[connection signal="timeout" from="mao/timer3seg" to="mao" method="_on_timer3seg_timeout"]
[connection signal="timeout" from="mao/timer1seg" to="mao" method="_on_timer1seg_timeout"]
